<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chip_all" />


        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_drama" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_crime" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_sci_fi" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_action" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_comedy" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_romance" />

        <com.google.android.material.chip.Chip
            style="@style/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_fantasy" />

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>